feat: add audio player

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -21,7 +21,7 @@
       <ul class="play-list"></ul>
     </div>
     <div class="weather">
-      <input type="text" class="city" placeholder="[Enter city]"/>
+      <input type="text" class="city" placeholder="[Enter city]" />
       <i class="weather-icon owf"></i>
       <div class="weather-error"></div>
       <div class="description-container">
@@ -51,7 +51,7 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
