--- a/momentum/index.html
+++ b/momentum/index.html
@@ -21,7 +21,7 @@
       <ul class="play-list"></ul>
     </div>
     <div class="weather">
-      <input type="text" class="city" placeholder="[Enter city]" />
+      <input type="text" class="city" />
       <i class="weather-icon owf"></i>
       <div class="weather-error"></div>
       <div class="description-container">
@@ -41,7 +41,7 @@
     <date class="date"></date>
     <div class="greeting-container">
       <span class="greeting"></span>
-      <input type="text" class="name" placeholder="[Enter name]" />
+      <input type="text" class="name" />
     </div>
   </main>
   <footer class="footer">
@@ -49,6 +49,26 @@
     <div>
       <div class="quote"></div>
       <div class="author"></div>
+    </div>
+    <div class="extra">
+      <button class="settings settings-icon"></button>
+      <div class="callout">
+        <div class="callout-item">
+          <span class="callout-item-header-lang"></span>
+          <div class="callout-item-content">
+            <label><input name="lang" type="radio" class="en" checked>En</label>
+            <label><input name="lang" type="radio" class="ru">Ru</label>
+          </div>
+        </div>
+        <div class="callout-item">
+          <span class="callout-item-header-api"></span>
+          <div class="callout-item-content">
+            <label><input name="api" type="radio" class="github" checked>GitHub</label>
+            <label><input name="api" type="radio" class="unsplash">Unsplash</label>
+            <label><input name="api" type="radio" class="flickr">Flickr</label>
+          </div>
+        </div>
+      </div>
     </div>
   </footer>
   <script type="module" src="js/index.js"></script>
