refactor: change home page code

--- a/art-quiz/src/pages/Home/Home.html
+++ b/art-quiz/src/pages/Home/Home.html
@@ -2,14 +2,13 @@
   <a class="settings-button" href="/#/settings"></a>
 </header>
 <main class="home-main">
-  <span class="app-name">Art Quiz</span>
+
+  <div class="empty-app-logo"></div>
+  
   <div class="start-buttons-container">
-    <a class="start-button">Artists</a>
-    <a class="start-button">Pictures</a>
+    <a class="start-button" href="/#/categories">Artists</a>
+    <a class="start-button" href="/#/categories">Pictures</a>
   </div>
 </main>
-<footer class="home-footer">
-  <div class="school-logo"></div>
-  <span class="year">2021</span>
-  <a class="course-reference" href="https://rs.school/js">CURSE</a>
-</footer>
+
+<footer class="empty-footer" />
