--- a/art-quiz/src/pages/Settings/Settings.html
+++ b/art-quiz/src/pages/Settings/Settings.html
@@ -30,8 +30,5 @@
     </div>
   </div>
 </main>
-<footer class="settings-footer">
-  <div class="school-logo"></div>
-  <span class="year">2021</span>
-  <a class="course-reference" href="https://rs.school/js">CURSE</a>
-</footer>
+
+<footer class="empty-footer" />
