refactor: change settings page code

--- a/art-quiz/src/pages/Home/Home.html
+++ b/art-quiz/src/pages/Home/Home.html
@@ -2,13 +2,19 @@
   <a class="settings-button" href="/#/settings"></a>
 </header>
 <main class="home-main">
-
-  <div class="empty-app-logo"></div>
-  
+  <div class="big-app-logo">
+    <div class="icon">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="text">
+      <span>Art</span>
+      <span>Quiz</span>
+    </div>
+  </div>
   <div class="start-buttons-container">
     <a class="start-button" href="/#/categories">Artists</a>
     <a class="start-button" href="/#/categories">Pictures</a>
   </div>
 </main>
-
 <footer class="empty-footer" />
