feat: add transition effects

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -8,8 +8,6 @@
   <title>Art Quiz</title>
 </head>
 
-<body>
-  <!-- <div class="transition transition-2 is-active"></div> -->
-</body>
+<body></body>
 
 </html>
